# src/swagger/swagger.yaml
@@ -840,7 +840,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /practitoner:
+  /practitioner:
     post: 
       tags:
         - Practitioner
@@ -901,7 +901,7 @@ paths:
         500:
           description: Internal server error
 
-  /practitoner/{id}: 
+  /practitioner/{id}: 
     get:
       tags: 
         - Practitioner
@@ -1092,7 +1092,7 @@ paths:
         401:
           description: unauthorized access
 
-  /practitoner/{id}/practitionerrole:
+  /practitioner/{id}/practitionerrole:
     post:
       tags:
         - Practitioner
